generator/SmolangParser.py
# Generated from .\Smolang.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class SmolangParser ( Parser ):

    grammarFileName = "Smolang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'while'", "'if'", "'else'", "'return'", 
                     "'=='", "'!='", "'>'", "'<'", "'>='", "'<='", "'function'", 
                     "','", "'{'", "'}'", "'show'", "'read'", "'global'", 
                     "'['", "']'", "'*'", "'/'", "'+'", "'-'", "'int'", 
                     "'real'", "'void'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'('", "')'", "'='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "REAL", "INT", 
                      "STRING", "ID", "NL", "LP", "RP", "ASSIGN", "WHITESPACE" ]

    RULE_program = 0
    RULE_line = 1
    RULE_lastline = 2
    RULE_while_st = 3
    RULE_if_st = 4
    RULE_return_st = 5
    RULE_condition = 6
    RULE_operator = 7
    RULE_func_declaration = 8
    RULE_codeblock = 9
    RULE_funcall = 10
    RULE_show_func = 11
    RULE_read_func = 12
    RULE_custom_func = 13
    RULE_global_assignment = 14
    RULE_assignment = 15
    RULE_value = 16
    RULE_list_value = 17
    RULE_arithmetic = 18
    RULE_ar_value = 19
    RULE_typ = 20

    ruleNames =  [ "program", "line", "lastline", "while_st", "if_st", "return_st", 
                   "condition", "operator", "func_declaration", "codeblock", 
                   "funcall", "show_func", "read_func", "custom_func", "global_assignment", 
                   "assignment", "value", "list_value", "arithmetic", "ar_value", 
                   "typ" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    REAL=27
    INT=28
    STRING=29
    ID=30
    NL=31
    LP=32
    RP=33
    ASSIGN=34
    WHITESPACE=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lastline(self):
            return self.getTypedRuleContext(SmolangParser.LastlineContext,0)


        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SmolangParser.LineContext)
            else:
                return self.getTypedRuleContext(SmolangParser.LineContext,i)


        def getRuleIndex(self):
            return SmolangParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = SmolangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 42
                    self.line()

                else:
                    raise NoViableAltException(self)
                self.state = 45 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 47
            self.lastline()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(SmolangParser.AssignmentContext,0)


        def NL(self):
            return self.getToken(SmolangParser.NL, 0)

        def global_assignment(self):
            return self.getTypedRuleContext(SmolangParser.Global_assignmentContext,0)


        def funcall(self):
            return self.getTypedRuleContext(SmolangParser.FuncallContext,0)


        def func_declaration(self):
            return self.getTypedRuleContext(SmolangParser.Func_declarationContext,0)


        def while_st(self):
            return self.getTypedRuleContext(SmolangParser.While_stContext,0)


        def if_st(self):
            return self.getTypedRuleContext(SmolangParser.If_stContext,0)


        def return_st(self):
            return self.getTypedRuleContext(SmolangParser.Return_stContext,0)


        def getRuleIndex(self):
            return SmolangParser.RULE_line

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLine" ):
                listener.enterLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLine" ):
                listener.exitLine(self)




    def line(self):

        localctx = SmolangParser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_line)
        try:
            self.state = 71
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 49
                self.assignment()
                self.state = 50
                self.match(SmolangParser.NL)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 52
                self.global_assignment()
                self.state = 53
                self.match(SmolangParser.NL)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 55
                self.funcall()
                self.state = 56
                self.match(SmolangParser.NL)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 58
                self.func_declaration()
                self.state = 59
                self.match(SmolangParser.NL)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 61
                self.while_st()
                self.state = 62
                self.match(SmolangParser.NL)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 64
                self.if_st()
                self.state = 65
                self.match(SmolangParser.NL)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 67
                self.return_st()
                self.state = 68
                self.match(SmolangParser.NL)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 70
                self.match(SmolangParser.NL)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LastlineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(SmolangParser.AssignmentContext,0)


        def EOF(self):
            return self.getToken(SmolangParser.EOF, 0)

        def global_assignment(self):
            return self.getTypedRuleContext(SmolangParser.Global_assignmentContext,0)


        def funcall(self):
            return self.getTypedRuleContext(SmolangParser.FuncallContext,0)


        def func_declaration(self):
            return self.getTypedRuleContext(SmolangParser.Func_declarationContext,0)


        def while_st(self):
            return self.getTypedRuleContext(SmolangParser.While_stContext,0)


        def if_st(self):
            return self.getTypedRuleContext(SmolangParser.If_stContext,0)


        def getRuleIndex(self):
            return SmolangParser.RULE_lastline

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLastline" ):
                listener.enterLastline(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLastline" ):
                listener.exitLastline(self)




    def lastline(self):

        localctx = SmolangParser.LastlineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_lastline)
        try:
            self.state = 92
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 73
                self.assignment()
                self.state = 74
                self.match(SmolangParser.EOF)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 76
                self.global_assignment()
                self.state = 77
                self.match(SmolangParser.EOF)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 79
                self.funcall()
                self.state = 80
                self.match(SmolangParser.EOF)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 82
                self.func_declaration()
                self.state = 83
                self.match(SmolangParser.EOF)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 85
                self.while_st()
                self.state = 86
                self.match(SmolangParser.EOF)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 88
                self.if_st()
                self.state = 89
                self.match(SmolangParser.EOF)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 91
                self.match(SmolangParser.EOF)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_stContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(SmolangParser.LP, 0)

        def condition(self):
            return self.getTypedRuleContext(SmolangParser.ConditionContext,0)


        def RP(self):
            return self.getToken(SmolangParser.RP, 0)

        def codeblock(self):
            return self.getTypedRuleContext(SmolangParser.CodeblockContext,0)


        def getRuleIndex(self):
            return SmolangParser.RULE_while_st

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile_st" ):
                listener.enterWhile_st(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile_st" ):
                listener.exitWhile_st(self)




    def while_st(self):

        localctx = SmolangParser.While_stContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_while_st)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(SmolangParser.T__0)
            self.state = 95
            self.match(SmolangParser.LP)
            self.state = 96
            self.condition()
            self.state = 97
            self.match(SmolangParser.RP)
            self.state = 98
            self.codeblock()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_stContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(SmolangParser.LP, 0)

        def condition(self):
            return self.getTypedRuleContext(SmolangParser.ConditionContext,0)


        def RP(self):
            return self.getToken(SmolangParser.RP, 0)

        def codeblock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SmolangParser.CodeblockContext)
            else:
                return self.getTypedRuleContext(SmolangParser.CodeblockContext,i)


        def getRuleIndex(self):
            return SmolangParser.RULE_if_st

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_st" ):
                listener.enterIf_st(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_st" ):
                listener.exitIf_st(self)




    def if_st(self):

        localctx = SmolangParser.If_stContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_if_st)
        try:
            self.state = 114
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 100
                self.match(SmolangParser.T__1)
                self.state = 101
                self.match(SmolangParser.LP)
                self.state = 102
                self.condition()
                self.state = 103
                self.match(SmolangParser.RP)
                self.state = 104
                self.codeblock()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.match(SmolangParser.T__1)
                self.state = 107
                self.match(SmolangParser.LP)
                self.state = 108
                self.condition()
                self.state = 109
                self.match(SmolangParser.RP)
                self.state = 110
                self.codeblock()
                self.state = 111
                self.match(SmolangParser.T__2)
                self.state = 112
                self.codeblock()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Return_stContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self):
            return self.getTypedRuleContext(SmolangParser.ValueContext,0)


        def getRuleIndex(self):
            return SmolangParser.RULE_return_st

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturn_st" ):
                listener.enterReturn_st(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturn_st" ):
                listener.exitReturn_st(self)




    def return_st(self):

        localctx = SmolangParser.Return_stContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_return_st)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(SmolangParser.T__3)
            self.state = 117
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SmolangParser.ValueContext)
            else:
                return self.getTypedRuleContext(SmolangParser.ValueContext,i)


        def operator(self):
            return self.getTypedRuleContext(SmolangParser.OperatorContext,0)


        def getRuleIndex(self):
            return SmolangParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)




    def condition(self):

        localctx = SmolangParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_condition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.value()
            self.state = 120
            self.operator()
            self.state = 121
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SmolangParser.RULE_operator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperator" ):
                listener.enterOperator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperator" ):
                listener.exitOperator(self)




    def operator(self):

        localctx = SmolangParser.OperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_operator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SmolangParser.T__4) | (1 << SmolangParser.T__5) | (1 << SmolangParser.T__6) | (1 << SmolangParser.T__7) | (1 << SmolangParser.T__8) | (1 << SmolangParser.T__9))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typ(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SmolangParser.TypContext)
            else:
                return self.getTypedRuleContext(SmolangParser.TypContext,i)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(SmolangParser.ID)
            else:
                return self.getToken(SmolangParser.ID, i)

        def LP(self):
            return self.getToken(SmolangParser.LP, 0)

        def RP(self):
            return self.getToken(SmolangParser.RP, 0)

        def codeblock(self):
            return self.getTypedRuleContext(SmolangParser.CodeblockContext,0)


        def getRuleIndex(self):
            return SmolangParser.RULE_func_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_declaration" ):
                listener.enterFunc_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_declaration" ):
                listener.exitFunc_declaration(self)




    def func_declaration(self):

        localctx = SmolangParser.Func_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_func_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(SmolangParser.T__10)
            self.state = 126
            self.typ()
            self.state = 127
            self.match(SmolangParser.ID)
            self.state = 128
            self.match(SmolangParser.LP)
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SmolangParser.T__23) | (1 << SmolangParser.T__24) | (1 << SmolangParser.T__25))) != 0):
                self.state = 129
                self.typ()
                self.state = 130
                self.match(SmolangParser.ID)


            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SmolangParser.T__11:
                self.state = 134
                self.match(SmolangParser.T__11)
                self.state = 135
                self.typ()
                self.state = 136
                self.match(SmolangParser.ID)
                self.state = 142
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 143
            self.match(SmolangParser.RP)
            self.state = 144
            self.codeblock()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CodeblockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SmolangParser.LineContext)
            else:
                return self.getTypedRuleContext(SmolangParser.LineContext,i)


        def getRuleIndex(self):
            return SmolangParser.RULE_codeblock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCodeblock" ):
                listener.enterCodeblock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCodeblock" ):
                listener.exitCodeblock(self)




    def codeblock(self):

        localctx = SmolangParser.CodeblockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_codeblock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(SmolangParser.T__12)
            self.state = 148 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 147
                self.line()
                self.state = 150 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SmolangParser.T__0) | (1 << SmolangParser.T__1) | (1 << SmolangParser.T__3) | (1 << SmolangParser.T__10) | (1 << SmolangParser.T__14) | (1 << SmolangParser.T__15) | (1 << SmolangParser.T__16) | (1 << SmolangParser.ID) | (1 << SmolangParser.NL))) != 0)):
                    break

            self.state = 152
            self.match(SmolangParser.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def show_func(self):
            return self.getTypedRuleContext(SmolangParser.Show_funcContext,0)


        def read_func(self):
            return self.getTypedRuleContext(SmolangParser.Read_funcContext,0)


        def custom_func(self):
            return self.getTypedRuleContext(SmolangParser.Custom_funcContext,0)


        def getRuleIndex(self):
            return SmolangParser.RULE_funcall

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncall" ):
                listener.enterFuncall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncall" ):
                listener.exitFuncall(self)




    def funcall(self):

        localctx = SmolangParser.FuncallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_funcall)
        try:
            self.state = 157
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SmolangParser.T__14]:
                self.enterOuterAlt(localctx, 1)
                self.state = 154
                self.show_func()
                pass
            elif token in [SmolangParser.T__15]:
                self.enterOuterAlt(localctx, 2)
                self.state = 155
                self.read_func()
                pass
            elif token in [SmolangParser.ID]:
                self.enterOuterAlt(localctx, 3)
                self.state = 156
                self.custom_func()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Show_funcContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(SmolangParser.LP, 0)

        def value(self):
            return self.getTypedRuleContext(SmolangParser.ValueContext,0)


        def RP(self):
            return self.getToken(SmolangParser.RP, 0)

        def getRuleIndex(self):
            return SmolangParser.RULE_show_func

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShow_func" ):
                listener.enterShow_func(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShow_func" ):
                listener.exitShow_func(self)




    def show_func(self):

        localctx = SmolangParser.Show_funcContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_show_func)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.match(SmolangParser.T__14)
            self.state = 160
            self.match(SmolangParser.LP)
            self.state = 161
            self.value()
            self.state = 162
            self.match(SmolangParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Read_funcContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(SmolangParser.LP, 0)

        def RP(self):
            return self.getToken(SmolangParser.RP, 0)

        def getRuleIndex(self):
            return SmolangParser.RULE_read_func

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRead_func" ):
                listener.enterRead_func(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRead_func" ):
                listener.exitRead_func(self)




    def read_func(self):

        localctx = SmolangParser.Read_funcContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_read_func)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.match(SmolangParser.T__15)
            self.state = 165
            self.match(SmolangParser.LP)
            self.state = 166
            self.match(SmolangParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Custom_funcContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SmolangParser.ID, 0)

        def LP(self):
            return self.getToken(SmolangParser.LP, 0)

        def RP(self):
            return self.getToken(SmolangParser.RP, 0)

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SmolangParser.ValueContext)
            else:
                return self.getTypedRuleContext(SmolangParser.ValueContext,i)


        def getRuleIndex(self):
            return SmolangParser.RULE_custom_func

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCustom_func" ):
                listener.enterCustom_func(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCustom_func" ):
                listener.exitCustom_func(self)




    def custom_func(self):

        localctx = SmolangParser.Custom_funcContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_custom_func)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.match(SmolangParser.ID)
            self.state = 169
            self.match(SmolangParser.LP)
            self.state = 171
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SmolangParser.T__17) | (1 << SmolangParser.REAL) | (1 << SmolangParser.INT) | (1 << SmolangParser.STRING) | (1 << SmolangParser.ID) | (1 << SmolangParser.LP))) != 0):
                self.state = 170
                self.value()


            self.state = 177
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SmolangParser.T__11:
                self.state = 173
                self.match(SmolangParser.T__11)
                self.state = 174
                self.value()
                self.state = 179
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 180
            self.match(SmolangParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Global_assignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SmolangParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(SmolangParser.ASSIGN, 0)

        def custom_func(self):
            return self.getTypedRuleContext(SmolangParser.Custom_funcContext,0)


        def value(self):
            return self.getTypedRuleContext(SmolangParser.ValueContext,0)


        def read_func(self):
            return self.getTypedRuleContext(SmolangParser.Read_funcContext,0)


        def getRuleIndex(self):
            return SmolangParser.RULE_global_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlobal_assignment" ):
                listener.enterGlobal_assignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlobal_assignment" ):
                listener.exitGlobal_assignment(self)




    def global_assignment(self):

        localctx = SmolangParser.Global_assignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_global_assignment)
        try:
            self.state = 194
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 182
                self.match(SmolangParser.T__16)
                self.state = 183
                self.match(SmolangParser.ID)
                self.state = 184
                self.match(SmolangParser.ASSIGN)
                self.state = 185
                self.custom_func()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 186
                self.match(SmolangParser.T__16)
                self.state = 187
                self.match(SmolangParser.ID)
                self.state = 188
                self.match(SmolangParser.ASSIGN)
                self.state = 189
                self.value()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 190
                self.match(SmolangParser.T__16)
                self.state = 191
                self.match(SmolangParser.ID)
                self.state = 192
                self.match(SmolangParser.ASSIGN)
                self.state = 193
                self.read_func()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

